<resources>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="emailSub">Email subscriptions</string>
    <string name="allowEmail">Allow email from other</string>
    <string name="signUpActivity">SignUpActivity</string>
    <string name="username6Letters">Username must contain at least 6 letters</string>
    <string name="password6Letters">Password must contain at least 6 letters</string>
    <string name="password1char1num">Password must contain at least one character and one number</string>
    <string name="invalidEmail">Incorrect e-mail address format</string>
    <string name="signUpSuccessfully">Sign Up Successfully</string>
    <string name="app_name">BaoLe</string>
    <string name="bMaxwell">Beatrice Maxwell</string>
    <string name="profile">Profile</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="post">Posts</string>
    <string name="news">News</string>
    <string name="slovakia">Slovakia</string>
    <string name="content">content</string>
    <string name="loading">loading</string>
    <string name="btnSignUp">Signup?</string>
    <string name="capitalSignUp">SIGN UP</string>
    <string name="logIn">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="logInSuccessfully">Log In Successfully</string>
    <string name="password7Letters">Password must contain at least 7 letters</string>
    <string name="passwordOnlyCharAndNum">Password must contain only characters and numbers</string>
    <string name="signUpSuccessully">Sign Up Successfully</string>
    <string name="confirmPasswordError">Confirm Password not match</string>
    <string name="backToScreen">Click the button to return to the main screen of your phone</string>
    <string name="liked">liked</string>
    <string name="like">like</string>
    <string name="likes">likes</string>
    <string name="zerolike">%s like</string>
    <string name="username">Username</string>
    <string name="comment">It is very delicious</string>
    <string name="timeline">Timeline</string>
    <string name="favourite">Favourite</string>
    <string name="addFavourite">Added to your Favourite</string>
    <string name="removeFavourite">Remove from your Favourite</string>
    <string name="download">download</string>
    <string name="downloading">Downloading...</string>
    <string name="asyncTask">AsyncTask</string>
    <string name="thread">Thread</string>
    <string name="handler">Handler</string>
    <string name="downloadSuccessfully">Download successfully</string>
    <string name="chartName">Sales And Expenses</string>
    <string name="noteSales">Sales</string>
    <string name="noteExpenses">Expenses</string>
    <string name="abbrJanuary">Jan</string>
    <string name="abbrFebruary">Feb</string>
    <string name="abbrMarch">Mar</string>
    <string name="abbrApril">Apr</string>
    <string name="abbrMay">May</string>
    <string name="abbrJune">Jun</string>
    <string name="abbrJuly">Jul</string>
    <string name="abbrAugust">Aug</string>
    <string name="abbrSeptember">Sep</string>
    <string name="abbrOctober">Oct</string>
    <string name="abbrNovember">Nov</string>
    <string name="abbrDecember">Dec</string>
    <string name="loadImage">Load Image</string>
    <string name="uploadImage">Upload Image</string>
    <string name="selectAction">Select Action</string>
    <string name="chooseGallery">Choose a photo from gallery</string>
    <string name="captureCamera">Capture a photo from camera</string>
    <string name="cancelAction">Cancel</string>
    <string name="data">data</string>
    <string name="title">Title</string>
    <string name="uploadSuccess">Upload Successfully</string>
    <string name="uploadFailed">Upload Failed</string>
    <string name="getImageFailed">Failed to load images</string>
    <string name="LoadImagesDialogMessage">We are working with your image files, please wait...</string>
    <string name="permissionNeeded">Permissions Needed</string>
    <string name="permissionMessageGallery">phone memory</string>
    <string name="permissionMessageCamera">camera and phone memory</string>
    <string name="permissionsDialogMessageFirstHalf">This App needs to access your</string>
    <string name="permissionsDialogMessageSecondHalf">to run properly.</string>
    <string name="directionToSettings">Please go to Settings to grant permisisons.</string>
    <string name="backToApp">Back to app.</string>
    <string name="gotoSettings">Go to Settings.</string>
    <string name="noPermissionsGranted">No permissions granted</string>
    <string name="usernameTest">Username</string>
    <string name="usernameNotEmpty">Error: Username must not be empty.</string>
    <string name="passwordNotEmpty">Error: Password must not be empty.</string>
    <string name="errorUsernameLengthMoreThan8AndLessThan21">Error: Username length must be more than 8 and less than 21 letters.</string>
    <string name="errorUsenameAtLeast2NonConsecutiveUppercaseLetters">Error: Username must contain at least 2 nonconsecutive uppercase letters.</string>
    <string name="errorUsernameNotContainSpecialCharacters">Error: Username must not contain special characters.</string>
    <string name="errorUsernameNotContainSpace">Error: Username must not contain space.</string>
    <string name="errorUsernameAtMost2ConsecutiveDigits">Error: Username contains at most 2 consecutive digits.</string>
    <string name="errorUsernameNotStartWithUppercaseLettersOrDigits">Error: Username must not start with uppercase letters or digits.</string>
    <string name="validUsername">Valid username.</string>
    <string name="errorPasswordAtLeast2SpecialCharactersOrDigits">Error: Password must contain at least 2 special characters or digits.</string>
    <string name="errorPasswordLengthAtLeast8">Error: Password length must be at least 8 letters.</string>
    <string name="errorPasswordAtMost2ConsecutiveRepeatedLetters">Error: Password contains at most 2 consecutive repeated letters.</string>
    <string name="errorPasswordNotEndWithDigitsOrSpecialLetters">Error: Password must not end with digits or special characters.</string>
    <string name="errorPasswordAtLeast3NonConsecutiveUppercaseLetters">Error: Password must contain at least 3 nonconsecutive uppercase letters.</string>
    <string name="validPassword">Valid Password.</string>
    <string name="PasswordMatchesUsername">Error: Password matches Username.</string>
    <string name="PasswordNotMatchUsername">Password does not match Username.</string>
    <string name="loginWithSocialAccount">Or log in using a social account</string>
    <string name="dontHaveAnAccountYet">Don\'t have an account yet?</string>
    <string name="forgotYourPassword">Forgot your password?</string>
    <string name="drawerLayoutEmail">lequocbao@gmail.com</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="imageDirectory">Image Directory</string>
    <string name="imageSaved">Image Saved</string>
    <string name="saveImageFailed">Failed to save images</string>
    <string name="imageExtension">png</string>
    <string name="imagePathPNG">image/png</string>
    <string name="notifyError">There is some error</string>
    <string name="demoDrawerSlide">Demo Drawer Slide</string>
    <string name="navigationDrawerOpen">Drawer Open</string>
    <string name="navigationDrawerClose">Drawer Closed</string>
    <string name="galleryPermissionAccepted">Gallery Permission Accepted</string>
    <string name="galleryPermissionDenied">Gallery Permisison Denied</string>
    <string name="cameraPermissionAccepted">Camera Permission Accepted</string>
    <string name="cameraPermissionDenied">Camera Permission Denied</string>
    <string name="sharePreferences">share preferences</string>
    <string name="internalAndExternal">internal or External</string>
    <string name="saveDatabase">save database</string>
    <string name="inputNull">Input null, nothing to save</string>
    <string name="informationSaved">Your information has been saved</string>
    <string name="internalInput">Input data for internal storage</string>
    <string name="externalInput">Input data for external storage</string>
    <string name="internalSave">Internal Save</string>
    <string name="externalSave">External Save</string>
    <string name="load">load</string>
    <string name="saveToDir">Saved data to</string>
    <string name="loadFromDir">Loaded data from</string>
    <string name="listIssues">List Issues</string>
    <string name="toViewAndGroupView">view and group view</string>
    <string name="toEventListener">event and listener</string>
    <string name="toActivityFragment">activity and fragment</string>
    <string name="toRecyclerView">recycler view</string>
    <string name="toViewPager">view pager</string>
    <string name="toFileStorage">file storage</string>
    <string name="toAsyncTask">asynctask - thread - handler</string>
    <string name="toCanvas">canvas</string>
    <string name="toRestAPI">rest api with retrofit</string>
    <string name="toDrawerLayout">drawer layout</string>
    <string name="listCompanies">LIST COMPANIES</string>
    <string name="listEmployees">LIST EMPLOYEES</string>
    <string name="companyName">COMPANY NAME</string>
    <string name="insert">INSERT</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="companyAsianTech">Asian Tech Company</string>
    <string name="companySharkChau">Shark Chau Company</string>
    <string name="companyBaoLe">Le Bao Company</string>
    <string name="companyTruongDinh">Truong Dinh Company</string>
    <string name="companyTranPhu">Tran Phu Company</string>
    <string name="companyTranHung">Tran Hung Company</string>
    <string name="textSelected">Selected</string>
    <string name="selectedEmployeeID">Selected Employee ID:</string>
    <string name="errorOccured">There is some error</string>
    <string name="fieldNotNull">This field must not be empty</string>
    <string name="hintEmployeeName">Employee Name</string>
    <string name="employeeID">Emp. ID</string>
    <string name="employeeName">Employee Name</string>
    <string name="confirmInsert">Do you want to insert?</string>
    <string name="confirmUpdate">Do you want to update?</string>
    <string name="confirmDelete">Do you want to delete?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="insertSuccessfully">Insert successfully</string>
    <string name="updateSuccessfully">Update successfully</string>
    <string name="deleteSuccessfully">Delete successfully</string>
    <string name="encoding">utf-8</string>
    <string name="inputSaved">Input saved</string>
    <string name="sdCardNotFound">SD Card Not Found</string>
    <string name="toUnitTest">Unit Test</string>
    <string name="musicPlaying">Playing</string>
    <string name="musicPause">Pause</string>
    <string name="musicName">Đừng quên tên anh - Hoa Vinh</string>
    <string name="pauseMusicBeforeClosing">Please pause music before closing notification</string>
    <string name="keyDurationTime">Key duration time</string>
    <string name="keyCurrentTime">Key current time</string>
    <string name="keyPauseNotification">Key pause notification</string>
    <string name="keyPlayNotification">Key play notification</string>
    <string name="keyCloseNotification">Key close notification</string>
    <string name="keyStartActivity">Key start activity</string>
    <string name="playingMusic">Playing Music</string>
    <string name="channelId">My Channel</string>
</resources>
