<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:text="@string/companyName"
        android:textAlignment="center"
        android:textColor="@color/colorRed"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="Autofill, LabelFor">

        <EditText
            android:id="@+id/edtIdEmployee"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_white"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/edtEmployeeName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_white"
            android:hint="@string/hintEmployeeName"
            android:inputType="text"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="ButtonStyle">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/insert" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/delete" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/listEmployees"
        android:textColor="@color/colorRed"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/employeeID"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/employeeName"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvEmployee"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

</LinearLayout>
