<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/edtEmail"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_shape_stroke_cyan"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorGrey"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_shape_stroke_cyan"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorGrey"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_shape_solid_cyan"
        android:text="@string/btnSignUp"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_shape_solid_cyan"
        android:text="@string/logIn"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

</LinearLayout>
